# hotenov.com

./: .dockerignore  .flake8  .gitattributes  .gitignore  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml
_DockerStuff/: .env.boilerplate  .env.dev.local  Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: bs-watch.js  build-assets.js  clean.js  render-assets.js  render-scripts.js  render-scss.js  start-debug.js  start.js
src/: .dockerignore  manage.py
src/hotenov_com/: asgi.py  settings.py  urls.py  wsgi.py
src/locale/ru/LC_MESSAGES/: django.mo  django.po
src/resume/: admin.py  models.py  translation.py  urls.py  views.py
src/resume/locale/ru/LC_MESSAGES/: django.mo  django.po
src/resume/migrations/: 0001_squashed_0027_alter_job_resume.py
src/resume/static/resume/css/: styles.css
src/resume/templates/resume/: _fa-icons.html  index.html  single.html
src/resume/templatetags/: resume_tags_and_filters.py
src/templates/: 403.html  404.html  base.html
src/templates/admin/: base.html
src/templates/includes/: _footer.html  _navbar.html
src/website/: admin.py  context_processors.py  sitemaps.py  tests.py  urls.py  views.py
src/website/migrations/: 0001_update_default_site_name.py
src/website/templates/website/: about.html  contact.html  index.html  resume.html
src/website/templatetags/: __init__.py  tags_helpers.py
src_front/assets/app-icons/: site.webmanifest
src_front/assets/css/: resume.css
src_front/assets/webfonts/: google-fonts.css
src_front/js/: color-modes.js  gallery-img-lists.js  gallery-img-lists.min.js  jkresponsivegallery-v2-no-youtube.min.js  jkresponsivegallery.min.js  scripts.js
src_front/scss/: styles.scss
src_front/scss/components/: _comparison-table.scss  _language-picker.scss  _responsive-gallery.scss  _theme-radio-toggle.scss
src_front/scss/sections/: _footer.scss
tests/: __init__.py  conftest.py
tests/resume_tests/: __init__.py  resume_tests.py
tests/website_tests/: __init__.py  website_tests.py
(+8 files in other folders)
